--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,8 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Odin recipes</h1> 
-<a href="recipes/lasagna.html">Lasagna recipe</a>   
+ <h1>Lasagna</h1>   
     
 </body>
 </html>
