Add image of lasagna

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 <h1>Odin recipes</h1> 
-<a href="recipes/lasagna.html">Lasagna recipe</a>   
+<a href="recipes/lasagna.html">Lasagna recipe</a> 
+<img src="Img/25321_EggplantParmesanII-mfs-2X3--f961d97dc9a8495ab215a92d0b92298d.webp"  
     
 </body>
 </html>
