--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 <body>
 <h1>Odin recipes</h1> 
 <a href="recipes/lasagna.html">Lasagna recipe</a> 
-<img src="Img/25321_EggplantParmesanII-mfs-2X3--f961d97dc9a8495ab215a92d0b92298d.webp"  
+<img src="Img/25321_EggplantParmesanII-mfs-2X3--f961d97dc9a8495ab215a92d0b92298d.webp">
+<p> by making the sauce with ground beef, bell peppers, onions, and a combo of tomato sauce, tomato paste, and crushed tomatoes. The three kinds of tomatoes gives the sauce great depth of flavor.
+    Let this simmer while you boil the noodles and get the cheeses ready. We're using ricotta, shredded mozzarella, and parmesan -- like the mix of tomatoes, this 3-cheese blend gives the lasagna great flavor!
+    From there, it's just an assembly job. A cup of meat sauce, a layer of noodles, more sauce, followed by a layer of cheese. Repeat until you have three layers and have used up all the ingredients.
+    Bake until bubbly and you're ready to eat!
+</p>  
+
+
     
 </body>
 </html>
