--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     From there, it's just an assembly job. A cup of meat sauce, a layer of noodles, more sauce, followed by a layer of cheese. Repeat until you have three layers and have used up all the ingredients.
     Bake until bubbly and you're ready to eat!
 </p>  
+<ul>
+<h3>ingredients</h3>
+<li>1 pound ground beef chuck</li>
+<li>1/2 medium onion, diced (about 3/4 cup)</li>
+<li>1/2 large bell pepper (green, red, or yellow), diced (about 3/4 cup)</li>
+<li>2 cloves garlic, minced</li>
+<li>1 (28-ounce)can good-quality tomato sauce</li>
+</ul>
 
 
     
