--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 <li>2 cloves garlic, minced</li>
 <li>1 (28-ounce)can good-quality tomato sauce</li>
 </ul>
+<Ol>
+<h3>Steps</h3>
+<li>Start by making the sauce </li>
+<li>Let this simmer while you boil the noodles and get the cheeses ready.</li>
+<li>From there, it's just an assembly job</li>
+<li>Bake until bubbly and you're ready to eat!</li>
 
 
     
