Change the picture

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,10 @@
 </head>
 <body>
  <h1>Lasagna</h1>
- <img src="Img/25321_EggplantParmesanII-mfs-2X3--f961d97dc9a8495ab215a92d0b92298d.webp">
+ <img src="/home/shubhamparmar/repos/Odin-recipes/Odin-recipes/Img/istockphoto-1096466528-612x612.jpg" alt="img of lasagna">
+ 
+
+
 <p> by making the sauce with ground beef, bell peppers, onions, and a combo of tomato sauce, tomato paste, and crushed tomatoes. The three kinds of tomatoes gives the sauce great depth of flavor.
     Let this simmer while you boil the noodles and get the cheeses ready. We're using ricotta, shredded mozzarella, and parmesan -- like the mix of tomatoes, this 3-cheese blend gives the lasagna great flavor!
     From there, it's just an assembly job. A cup of meat sauce, a layer of noodles, more sauce, followed by a layer of cheese. Repeat until you have three layers and have used up all the ingredients.
