Add a Ramen page and img

--- a/recipes/Ramen.html
+++ b/recipes/Ramen.html
@@ -7,14 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Odin recipes</h1> 
-<ol>
-<li><a href="recipes/lasagna.html">Lasagna recipe</a></li>
-<li><a href="recipes/Ramen.html">Ramen recipe</a>                                                  </li>
-
-
-
-
-</ol>
+    <h1>Ramen recipe</h1>
+<img src="/home/shubhamparmar/repos/Odin-recipes/Odin-recipes/Img/BD13D8BA-9BFA-4BFD-AF09-17DC38CBFECA.jpeg" alt="Photo of Ramen">
+    
 </body>
 </html>
