Finish Ramen page

--- a/recipes/Ramen.html
+++ b/recipes/Ramen.html
@@ -9,6 +9,22 @@
 <body>
     <h1>Ramen recipe</h1>
 <img src="/home/shubhamparmar/repos/Odin-recipes/Odin-recipes/Img/BD13D8BA-9BFA-4BFD-AF09-17DC38CBFECA.jpeg" alt="Photo of Ramen">
-    
+<p>Ramen is a Japanese noodle dish. It consists of Chinese-style wheat noodles served in a broth; common flavors are soy sauce and miso, with typical toppings including sliced pork, nori, menma, and scallions. Ramen has its roots in Chinese noodle dishes.</p>
+<ul>]
+<h3>Ingredients</h3>    
+<li>wheat flour</li>
+<li>salt</li>
+<li>water</li>
+<li>kansui</li>
+</ul>
+<ol>
+<h3>Steps</h3>
+<li>Stir-Fry Aromatics: Garlic and ginger, what a delicious duo. This is where the flavor is, friends.</li>
+<li>Make Your (Easy!) Broth: Add some chicken broth and dried shiitake mushrooms for some umami punch.</li>
+<li>Add Noodles: Cook your noodles right in the broth with some scallions (more flavor, please!).</li>
+<li>Add Veg: Thinly sliced kale, shredded carrots, whatever you’d like! Cook until just tender.</li>
+
+</ol>
+  
 </body>
 </html>
