--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <h1>Odin recipes</h1> 
 <ol>
 <li><a href="recipes/lasagna.html">Lasagna recipe</a></li>
-<li><a href="recipes/Ramen.html">Ramen recipe</a>                                                  </li>
+<li><a href="recipes/Ramen.html">Ramen recipe</a></li>
+<li><a href="recipes/pizza.html">Pizza recipe</a>                            </li>
+                                                                  
 
 
 
